<resources>
    <string name="app_name">EBEC Aveiro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="action_signOut">Sign Out</string>
    <string name="system_theme_preference_value">SYSTEM THEME PREFERENCE</string>
    <string name="dark_mode">Dark Mode</string>

    <string name="dark_mode_def_value"> MODE_NIGHT_NO </string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_teams">My Team</string>
    <string name="team_design">Team Design</string>
    <string name="case_study">Case Study</string>
    <string name="team_members">Members</string>
    <string name="members">Team Members</string>
    <string name="scores">Scores</string>
    <string name="provas">Provas</string>
    <string name="default_notification_channel_id">EBEC Aveiro</string>
    <string name="default_notification_channel_name">EBEC Aveiro</string>
    <string name="msg_subscribed">Subscribed</string>
    <string name="msg_subscribe_failed">Subscription Failed</string>
    <string name="msg_token_fmt">Token</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_best">BEST Aveiro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_sponsors">Sponsors</string>
</resources>