<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:id="@+id/drawer_menu">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/ic_menu_team"
            android:title="@string/menu_teams" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_best"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_best" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_baseline_admin"
            android:title="@string/menu_admin" />
        <item
            android:id="@+id/nav_sponsors"
            android:icon="@drawable/ic_hand_shake"
            android:title="@string/menu_sponsors" />
    </group>
</menu>